[package]
name = "bevy_verlet"
version = "0.2.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
repository = "https://github.com/ManevilleF/bevy_verlet"
license-file = "./LICENSE"
exclude = ["docs"]
description = "Verlet physics implementation in bevy"
keywords = ["verlet", "physics", "bevy", "cloth"]
categories = ["game-engines", "game-development"]
readme = "README.md"
documentation = "https://docs.rs/bevy_verlet"

[features]
default = []
debug = ["bevy_prototype_debug_lines"]

[dependencies]

[dependencies.bevy]
version = "0.6"
default-features = false

[dependencies.bevy_prototype_debug_lines]
version = "0.6"
optional = true

[dev-dependencies]

[dev-dependencies.bevy]
version = "0.6"
features = ["render", "bevy_winit", "x11"]
default-features = false

[[example]]
name = "2d_cloth"
required-features = ["debug"]

[[example]]
name = "2d_cloth_cutter"
required-features = ["debug"]

[[example]]
name = "2d_line"
required-features = ["debug"]

[[example]]
name = "3d_cloth"
required-features = ["debug"]

[[example]]
name = "3d_line"
required-features = ["debug"]