[package]
name = "bevy_verlet"
version = "0.7.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
repository = "https://github.com/ManevilleF/bevy_verlet"
license-file = "./LICENSE"
exclude = ["docs", ".github"]
description = "Verlet physics implementation in bevy"
keywords = ["verlet", "physics", "bevy", "cloth"]
categories = ["game-engines", "game-development"]
readme = "README.md"
documentation = "https://docs.rs/bevy_verlet"

[features]
default = []
debug = ["bevy/bevy_gizmos", "bevy/bevy_render"]

[dependencies]

[dependencies.bevy]
version = "0.12"
default-features = false

[dev-dependencies]

[dev-dependencies.bevy]
version = "0.12"
features = ["bevy_render", "bevy_winit", "x11", "bevy_core_pipeline", "bevy_sprite", "bevy_pbr"]
default-features = false

[[example]]
name = "2d_cloth"
required-features = ["debug"]

[[example]]
name = "2d_cloth_cutter"
required-features = ["debug"]

[[example]]
name = "2d_line"
required-features = ["debug"]

[[example]]
name = "3d_cloth"
required-features = ["debug"]

[[example]]
name = "3d_line"
required-features = ["debug"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
